fixed button issue on iOS

--- a/app/style.scss
+++ b/app/style.scss
@@ -41,12 +41,15 @@ canvas#gameboard {
   font-family: 'Alfa Slab One', cursive;
   background-color: white;
   margin-bottom: 20px;
-  width: 200px;
-  height: 50px;
+  padding: 8px 20px;
   outline: 0;
   border: 2px solid;
   border-radius: 4px;
   border-color: #333;
+}
+
+.gamebutton:hover {
+  background-color: #ecf0f1;
 }
 
 .message {
